--- a/main.css
+++ b/main.css
@@ -7,3 +7,9 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+header{
+    width: 90%;
+    height: 95%;
+    border: 1px solid #000;
+    margin: auto;
+}
