--- a/main.css
+++ b/main.css
@@ -18,4 +18,14 @@ header nav{
     height: 7%;
     border: 1px solid #000;
     margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+header nav ul{
+    list-style: none;
+    display: flex;
+}
+header nav ul li{
+    padding: 3px 15px;
 }
