--- a/main.css
+++ b/main.css
@@ -29,3 +29,10 @@ header nav ul{
 header nav ul li{
     padding: 3px 15px;
 }
+header nav ul li a{
+    text-decoration: none;
+    color: #121213;
+    font-size: 13px;
+    font-weight: 500;
+    transition: .3s linear;
+}
