--- a/main.css
+++ b/main.css
@@ -47,3 +47,6 @@ header nav ul li:nth-last-child(1) a{
 header nav ul li a:hover{
     color: gray;
 }
+header nav .bi_three-dots{
+    display: none;
+}
