--- a/main.css
+++ b/main.css
@@ -56,3 +56,11 @@ header .content{
     height: 80%;
     border: 1px solid #000;
 }
+header .content::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 80%;
+    border: 1px solid #000;
+    background: url('/img/img/background1.png');
+}
