--- a/main.css
+++ b/main.css
@@ -62,5 +62,7 @@ header .content::before{
     width: 100%;
     height: 80%;
     border: 1px solid #000;
-    background: url('/img/img/background1.png');
+    background: url('/img/img/background1.png') no-repeat center center/cover;
+    border-radius: 10px;
+    z-index: -1;
 }
