--- a/main.css
+++ b/main.css
@@ -76,10 +76,25 @@ header .content .cont_bx h1{
     line-height: 40px;
     font-weight: 800;
     /*margin: 0;*/
-    border: 1px solid #000;
+    /*border: 1px solid #000;*/
 }
 header .content .cont_bx p{
     font-size: 14px;
     font-weight: 400;
     color: rgb(241, 241, 241);
+}
+header .content .cont_bx button{
+    margin-top: 20px;
+    padding: 10px 20px;
+    border-radius: 20px;
+    border: 2px solid #000;
+    background: #000;
+    color: #fff;
+    outline: none;
+    cursor: pointer;
+    transition: .3s linear;
+}
+header .content .cont_bx button:hover{
+    background: rgb(113, 113, 113);
+    border: 2px solid rgb(113, 113, 113);
 }
