--- a/main.css
+++ b/main.css
@@ -105,3 +105,16 @@ header .trip_bx{
     margin: auto;
     border: 1px solid #000;
 }
+header .trip_bx .search_bx{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+    border: 5px;
+    box-shadow: 0px 10px 25px rgb(113, 113, 113);
+}
