--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ header nav .bi-three-dots{
 header .content{
     position: relative;
     width: 100%;
-    height: 80%;
+    height: 93%;
     border: 1px solid #000;
 }
 header .content::before{
@@ -117,4 +117,5 @@ header .trip_bx .search_bx{
     background: #fff;
     border: 5px;
     box-shadow: 0px 10px 25px rgb(113, 113, 113);
+    z-index: 1;
 }
