--- a/main.css
+++ b/main.css
@@ -119,3 +119,8 @@ header .trip_bx .search_bx{
     box-shadow: 0px 10px 25px rgb(113, 113, 113);
     z-index: 1;
 }
+header .trip_bx .search_bx .card{
+    width: 200px;
+    height: 100%;
+    border: 1px solid #000;
+}
