--- a/main.css
+++ b/main.css
@@ -103,7 +103,7 @@ header .trip_bx{
     width: 95%;
     height: auto;
     margin: auto;
-    border: 1px solid #000;
+    /*border: 1px solid #000;*/
 }
 header .trip_bx .search_bx{
     position: absolute;
@@ -115,7 +115,7 @@ header .trip_bx .search_bx{
     align-items: center;
     justify-content: center;
     background: #fff;
-    border: 5px;
+    border-radius: 5px;
     box-shadow: 0px 10px 25px rgb(113, 113, 113);
     z-index: 1;
 }
