--- a/main.css
+++ b/main.css
@@ -129,3 +129,16 @@ header .trip_bx .search_bx .card h4{
     margin: 0;
     font-weight: 700;
 }
+header .trip_bx .search_bx .card h4 .bi{
+    position: absolute;
+    font-size: 13px;
+    margin: 2px 0px 0px 5px;
+    transition: .3s linear;
+}
+header .trip_bx .search_bx .card input{
+    margin-top: 3px;
+    padding: 5px 0px;
+    border: none;
+    outline: none;
+    font-size: 13px;
+}
