--- a/main.css
+++ b/main.css
@@ -118,11 +118,12 @@ header .trip_bx .search_bx{
     border-radius: 5px;
     box-shadow: 0px 10px 25px rgb(113, 113, 113);
     z-index: 1;
+    padding: 10px 20px;
 }
 header .trip_bx .search_bx .card{
     width: 200px;
     height: 100%;
-    border: 1px solid #000;
+    /*border: 1px solid #000;*/
 }
 header .trip_bx .search_bx .card h4{
     font-size: 15px;
@@ -141,4 +142,17 @@ header .trip_bx .search_bx .card input{
     border: none;
     outline: none;
     font-size: 13px;
+}
+header .trip_bx .search_bx input[type="button"]{
+    background: #000;
+    color: #fff;
+    border: none;
+    outline: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    transition: .3s linear;
+    cursor: pointer;
+}
+header .trip_bx .search_bx input[type="button"]:hover{
+    background: gray;
 }
