--- a/main.css
+++ b/main.css
@@ -166,5 +166,5 @@ header .trip_bx .travel_bx{
     border: 1px solid #000;
     border-radius: 10px;
     padding-bottom: 20px;
-    box-shadow: 0px 20px 25px --10px;
+    box-shadow: 0px 20px 25px -10px rgb(165, 165, 165);
 }
