--- a/main.css
+++ b/main.css
@@ -168,3 +168,13 @@ header .trip_bx .travel_bx{
     padding-bottom: 20px;
     box-shadow: 0px 20px 25px -10px rgb(165, 165, 165);
 }
+header .trip_bx .travel_bx::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background: rgb(241, 241, 241 .7);
+    backdrop-filter:  blu(5px) ;
+    z-index: -1;
+}
