--- a/main.css
+++ b/main.css
@@ -182,3 +182,9 @@ header .trip_bx .travel_bx h4{
     margin: 0;
     padding: 60px 0px 15px 1.7%;
 }
+header .trip_bx .travel_bx .cards{
+    width: 95%;
+    height: auto;
+    margin: 0 auto;
+    border: 1px solid #000;
+}
