--- a/main.css
+++ b/main.css
@@ -174,8 +174,8 @@ header .trip_bx .travel_bx::before{
     width: 100%;
     height: 100%;
     border-radius: 10px;
-    background: rgb(241, 241, 241 .7);
-    backdrop-filter:  blu(5px) ;
+    background: rgb(241, 241, 241, .7);
+    backdrop-filter:  blur(5px) ;
     z-index: -1;
 }
 header .trip_bx .travel_bx h4{
@@ -183,7 +183,7 @@ header .trip_bx .travel_bx h4{
     padding: 60px 0px 15px 1.7%;
 }
 header .trip_bx .travel_bx .cards{
-    width: 95%;
+    width: 96%;
     height: auto;
     margin: 0 auto;
     border: 1px solid #000;
@@ -191,4 +191,5 @@ header .trip_bx .travel_bx .cards{
 header .trip_bx .travel_bx .cards .card{
     width: 220px;
     height: 180px;
+    border: 1px solid #000;
 }
