--- a/main.css
+++ b/main.css
@@ -203,3 +203,8 @@ header .trip_bx .travel_bx .cards .card h3{
     font-size: 16px;
     font-weight: 600;
 }
+header .trip_bx .travel_bx .cards .card h3 img{
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+}
