--- a/main.css
+++ b/main.css
@@ -208,3 +208,7 @@ header .trip_bx .travel_bx .cards .card h3 img{
     height: 20px;
     margin-left: 5px;
 }
+header .trip_bx .travel_bx .cards .card img{
+    width: 100%;
+    height: 50%;
+}
