--- a/main.css
+++ b/main.css
@@ -212,3 +212,9 @@ header .trip_bx .travel_bx .cards .card img{
     width: 100%;
     height: 50%;
 }
+header .trip_bx .travel_bx .cards .card .btn_city{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid #000;
+}
