--- a/main.css
+++ b/main.css
@@ -161,9 +161,9 @@ header .trip_bx .travel_bx{
     width: 100%;
     height: auto;
     margin: auto;
-    top: 40px;
+    top: 30px;
     /*background: #000;*/
-    border: 1px solid #000;
+    /*border: 1px solid #000;*/
     border-radius: 10px;
     padding-bottom: 20px;
     box-shadow: 0px 20px 25px -10px rgb(165, 165, 165);
@@ -186,7 +186,7 @@ header .trip_bx .travel_bx .cards{
     width: 96%;
     height: auto;
     margin: 0 auto;
-    border: 1px solid #000;
+    /*border: 1px solid #000;*/
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -194,7 +194,7 @@ header .trip_bx .travel_bx .cards{
 header .trip_bx .travel_bx .cards .card{
     width: 220px;
     height: 180px;
-    border: 1px solid #000;
+    /*border: 1px solid #000;*/
 }
 header .trip_bx .travel_bx .cards .card h3{
     margin: 0px 0px 10px 0px ;
@@ -236,4 +236,8 @@ header .trip_bx .travel_bx .cards .card .btn_city h5{
     margin: 0;
     margin-top: 5px;
     line-height: 15px;
+}
+header .trip_bx .travel_bx .cards .card .btn_city h5 span{
+    font-size: 13px;
+    font-weight: 700;
 }
