--- a/main.css
+++ b/main.css
@@ -10,13 +10,13 @@ body{
 header{
     width: 80%;
     height: 95vh;
-    border: 1px solid #000;
+    /*border: 1px solid #000;*/
     margin: auto;
 }
 header nav{
     width: 95%;
     height: 7%;
-    border: 1px solid #000;
+    /*border: 1px solid #000;*/
     margin: auto;
     display: flex;
     align-items: center;
@@ -54,7 +54,7 @@ header .content{
     position: relative;
     width: 100%;
     height: 93%;
-    border: 1px solid #000;
+    /*border: 1px solid #000;*/
 }
 header .content::before{
     content: '';
