--- a/main.css
+++ b/main.css
@@ -241,3 +241,10 @@ header .trip_bx .travel_bx .cards .card .btn_city h5 span{
     font-size: 13px;
     font-weight: 700;
 }
+.offers{
+    width: 60%;
+    height: auto;
+    border: 1px solid #000;
+    margin: auto;
+    margin-top: 100px;
+}
