--- a/main.css
+++ b/main.css
@@ -248,3 +248,13 @@ header .trip_bx .travel_bx .cards .card .btn_city h5 span{
     margin: auto;
     margin-top: 100px;
 }
+.offers h1{
+    font-weight: 600;
+    text-align: center;
+    margin: 0;
+}
+.offers p{
+    font-weight: 500;
+    text-align: center;
+    margin: 0;
+}
