--- a/main.css
+++ b/main.css
@@ -265,3 +265,9 @@ header .trip_bx .travel_bx .cards .card .btn_city h5 span{
     justify-content: space-between;
     border: 1px solid #000;
 }
+.offers .cards .card{
+    position: relative;
+    width: 200px;
+    height: 350px;
+    border: 1px solid #000;
+}
