--- a/main.css
+++ b/main.css
@@ -281,3 +281,15 @@ header .trip_bx .travel_bx .cards .card .btn_city h5 span{
     place-items: center;
     margin: auto;
 }
+.offers .cards .card .img_text{
+    position: relative;
+    width: 100%;
+    height: 250px;
+    margin-top: 5px;
+}
+.offers .cards .card .img_text img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px 10px 0px 0px;
+}
