--- a/main.css
+++ b/main.css
@@ -293,3 +293,10 @@ header .trip_bx .travel_bx .cards .card .btn_city h5 span{
     height: 100%;
     border-radius: 10px 10px 0px 0px;
 }
+.offers .cards .card .img_text h4{
+    position: absolute;
+    font-size: 9px;
+    padding: 0px 15px;
+    bottom: 0;
+    color: #fff;
+}
