--- a/main.css
+++ b/main.css
@@ -296,14 +296,29 @@ header .trip_bx .travel_bx .cards .card .btn_city h5 span{
 .offers .cards .card .img_text h4{
     position: absolute;
     font-size: 9px;
-    padding: 0px 15px;
+    padding: 10px 15px;
     bottom: 0;
+    margin: 0;
     color: #fff;
+    z-index: 2;
 }
 .offers .cards .card .img_text h4::before{
     content: '';
     position: absolute;
     width: 100%;
     height: 100%;
-    background: rgb(255, 255, 255);
+    background: rgb(255, 255, 255, .1);
+    backdrop-filter: blur(5px);
+    z-index: -1;
+    bottom: 0;
+    left: 0;
+}
+.offers .cards .card .cont_bx{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid #000;
+    padding: 5px 0px;
+    border-radius: 0px 0px 5px 5px;
 }
