--- a/main.css
+++ b/main.css
@@ -403,3 +403,12 @@ header .trip_bx .travel_bx .cards .card .btn_city h5 span{
     line-height: 10;
     letter-spacing: 1px;
 }
+.destination .des_bx p{
+    font-size: 12px;
+}
+.destination .des_bx li{
+    list-style-type: none;
+    padding: 0px 0px 8px 0px;
+    font-size: 12px;
+    font-weight: 500;
+}
