--- a/main.css
+++ b/main.css
@@ -412,3 +412,18 @@ header .trip_bx .travel_bx .cards .card .btn_city h5 span{
     font-size: 12px;
     font-weight: 500;
 }
+.destination .des_bx h6{
+    width: 250px;
+    font-size: 12px;
+    font-weight: 500;
+    margin: 20px 0px;
+}
+.destination .des_bx button{
+    font-size: 12px;
+    padding: 8px 15px;
+    border-radius: 20px;
+    background: #000;
+    color: #fff;
+    border: 2px solid #000;
+    transition: .3s linear;
+}
