--- a/main.css
+++ b/main.css
@@ -426,4 +426,14 @@ header .trip_bx .travel_bx .cards .card .btn_city h5 span{
     color: #fff;
     border: 2px solid #000;
     transition: .3s linear;
+    cursor: pointer;
+}
+.destination .des_bx button:hover{
+    background: gray;
+    border: 2px solid gray;
+}
+.destination .img_bx img{
+    width: 100%;
+    height: 420px;
+    border-radius: 5px;
 }
