--- a/main.css
+++ b/main.css
@@ -437,3 +437,12 @@ header .trip_bx .travel_bx .cards .card .btn_city h5 span{
     height: 420px;
     border-radius: 5px;
 }
+.destination .img_bx .msg{
+    position: absolute;
+    top: 50%;
+    left: -10%;
+    width: 160px;
+    height: 50px;
+    background: #fff;
+    box-shadow: 0px 5px 20px gray;
+}
