--- a/main.css
+++ b/main.css
@@ -448,6 +448,7 @@ header .trip_bx .travel_bx .cards .card .btn_city h5 span{
     display: flex;
     align-items: center;
     padding: 0px 10px;
+    border-radius: 5px;
 }
 .destination .img_bx .msg img{
     width: 30px;
@@ -463,6 +464,17 @@ header .trip_bx .travel_bx .cards .card .btn_city h5 span{
 }
 .destination .img_bx .msg .cont .bi:nth-child(1){
     color: red;
+    margin-right: 5px;
+    font-size: 13px;
+}
+.destination .img_bx .msg .cont .bi span{
+    font-style: normal;
+    margin-left: 3px;
+    font-size: 12px;
+    color: gray;
+}
+.destination .img_bx .msg .cont .bi:nth-child(2){
+    color: rgb(112, 196, 229);;
     margin-right: 5px;
     font-size: 13px;
 }
