--- a/main.css
+++ b/main.css
@@ -492,3 +492,10 @@ footer{
     justify-content: center;
     flex-direction: column;
 }
+footer h2{
+    text-align: center;
+    margin: 0;
+    margin-top: 25px;
+    line-height: 30px;
+    font-weight: 600;
+}
