--- a/main.css
+++ b/main.css
@@ -504,3 +504,15 @@ footer p{
     width: 400px;
     font-size: 13px;
 }
+footer .input{
+    box-shadow: 0px 3px 20px -1px gray;
+    border-radius: 20px;
+}
+footer .input input{
+    padding: 12px 15px;
+    border: none;
+    outline: none;
+    font-size: 12px;
+    border-radius: 20px 0px 0px 20px;
+    background: #000;
+}
