--- a/main.css
+++ b/main.css
@@ -509,10 +509,20 @@ footer .input{
     border-radius: 20px;
 }
 footer .input input{
-    padding: 12px 15px;
+    padding: 10px 20px;
     border: none;
     outline: none;
     font-size: 12px;
     border-radius: 20px 0px 0px 20px;
+}
+footer .input button{
+    padding: 12px 15px;
+    border: none;
+    outline: none;
+    font-size: 12px;
+    border-radius: 0px 20px 20px 0px;
     background: #000;
+    color: #fff;
+    cursor: pointer;
+    transition: .3s linear;
 }
