--- a/main.css
+++ b/main.css
@@ -247,6 +247,7 @@ header .trip_bx .travel_bx .cards .card .btn_city h5 span{
     /*border: 1px solid #000;*/
     margin: auto;
     margin-top: 100px;
+    transition: .5s linear;
 }
 .offers h1{
     font-weight: 600;
