--- a/responsive.css
+++ b/responsive.css
@@ -51,3 +51,20 @@
         width: 75%;
     }
 }
+@media screen and (max-width: 714px){
+    header nav ul{
+        list-style: none;
+        display: flex;
+        position: absolute;
+        width: 100px;
+        height: auto;
+        flex-direction: column;
+        background: #fff;
+        border-radius: 5px;
+        box-shadow: 0px 0px 10px gray;
+        justify-content: center;
+        top: 0px;
+        z-index: 999999999999999;
+        padding: 10px 20px;
+    }
+}
