--- a/responsive.css
+++ b/responsive.css
@@ -94,4 +94,19 @@
         bottom: -43px;
         font-size: 13px;
     }
+    .offers{
+        width: 85%;
+    }
+    .destination{
+        width: 100%;
+        flex-direction: column-reverse;
+    }
+    .destination .des_bx, .img_bx{
+        position: relative;
+        width: 55%;
+        height: auto;
+    }
+    .destination .des_bx{
+        margin-top: 30px;
+    }
 }
