--- a/responsive.css
+++ b/responsive.css
@@ -110,3 +110,12 @@
         margin-top: 30px;
     }
 }
+@media screen and (max-width: 541px){
+    header .content .cont_bx{
+        width: 85%;
+    }
+    header .content .cont_bx h1{
+        width: 300px;
+        font-size: 22px;
+    }
+}
