--- a/responsive.css
+++ b/responsive.css
@@ -151,9 +151,14 @@
     .offers{
         margin-top: 80px;
     }
+    .destination .img_bx .msg:nth-child(2){
+        left: 50%;
+    }
     footer p{
-        text-align: center;
         width: 330px;
         font-size: 13px;
+    }
+    footer ul li{
+        margin-right: 20px;
     }
 }
